# rocket-test-app

./: Cargo.toml  database.sqlite-shm  database.sqlite-wal
src/: auth.rs  main.rs
